# watch-party

./: .gitignore  Cargo.toml  README.md
wp_client/: Cargo.toml  config.json
wp_client/src/: main.rs
wp_server/: Cargo.toml  Dockerfile  videos.json
wp_server/src/: main.rs
wp_transaction/: Cargo.toml
wp_transaction/src/: lib.rs
