[package]
name = "wp_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
gstreamer = "0.21.1"
gstreamer-play = "0.21.0"
postcard = { version = "1.0.8", features = ["alloc"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
wp_transaction = { version = "0.1.0", path = "../wp_transaction" }
