[package]
name = "wp_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
futures-util = "0.3.29"
gstreamer = "0.21.1"
gstreamer-play = "0.21.0"
postcard = { version = "1.0.8", features = ["alloc"] }
reqwest = { version = "0.11.22", features = ["stream"] }
ring = { version = "0.17.5", features = ["std"] }
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
wp_transaction = { version = "0.1.0", path = "../wp_transaction" }
