[package]
name = "wp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
postcard = { version = "1.0.8", features = ["alloc"] }
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
wp_transaction = { version = "0.1.0", path = "../wp_transaction" }
