[package]
name = "wp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
crossterm = { version = "0.28.0", features = ["event-stream"] }
futures-util = "0.3.29"
log = { version = "0.4.20", features = ["std"] }
postcard = { version = "1.0.8", features = ["alloc"] }
ratatui = "0.28.0"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.36.0", features = ["full"] }
wp_transaction = { version = "0.1.0", path = "../wp_transaction" }
